--- a/client/src/custom.css
+++ b/client/src/custom.css
@@ -9,9 +9,9 @@ input[type="range"] {
 
   -webkit-appearance: none;
   position: relative;
-  background: #ccc;
+  background: #fff;
   width: 100%;
-  height: 2px;
+  height: 3px;
   border-radius: 2px;
   cursor: pointer;
 }
@@ -50,18 +50,18 @@ input[type="range"]::-moz-range-progress {
 /* slider thumb - chrome and safari */
 input[type="range"]::-webkit-slider-thumb {
   -webkit-appearance: none;
-  height: 8px;
-  width: 8px;
+  height: 12px;
+  width: 12px;
   border-radius: 50%;
   border: none;
-  background-color: #f50;
+  background-color: #e4003a;
   cursor: pointer;
   position: relative;
 }
 
 /* dragging thumb - chrome and safari */
 input[type="range"]:active::-webkit-slider-thumb {
-  transform: scale(1.2);
+  transform: scale(1.1);
 }
 
 /* slider thumb - firefox */
