--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,6 +8,19 @@
   --color-disabled: #999;
   --text-color: #222;
   --color-player: #666666;
+
+  --color-blue-light: #dae8f5;
+}
+
+a {
+  color: #0060b6;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #00a0c6;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 body {
@@ -88,6 +101,7 @@ nav .brand-heading {
 
 .layout {
   display: flex;
+  min-height: 90vh;
 }
 
 .sidebar {
@@ -113,8 +127,12 @@ nav .brand-heading {
   font-weight: 500;
 }
 
-.tracks {
+.main {
   flex: 5;
+}
+
+.tracks {
+  padding: 4px 6px;
 }
 
 .player-items {
@@ -303,4 +321,48 @@ nav .brand-heading {
   align-items: center;
   gap: 8px;
   font-size: 2.4rem;
+}
+
+.playlist {
+  background-color: var(--color-light);
+  padding: 1rem;
+}
+
+.playlist-banner {
+  width: 100%;
+  height: 24rem;
+  background-color: var(--color-blue-light);
+  display: flex;
+  align-items: center;
+}
+
+.playlist-image-container {
+  flex: 2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* gap: 1rem; */
+}
+.playlist-image {
+  height: 16rem;
+  width: 16rem;
+  background-color: #00a0c6;
+  border-radius: 8px;
+}
+.playlist-details {
+  flex: 8;
+}
+
+.playlist-text {
+  font-size: 1.4rem;
+  color: var(--color-primary);
+}
+.playlist-heading {
+  font-size: 5.2rem;
+  color: var(--color-primary);
+}
+
+.playlist-artist {
+  color: var(--color-primary);
+  font-size: 1.6rem;
 }
