--- a/client/src/index.css
+++ b/client/src/index.css
@@ -25,9 +25,8 @@ a:hover {
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
+    "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -365,4 +364,92 @@ nav .brand-heading {
 .playlist-artist {
   color: var(--color-primary);
   font-size: 1.6rem;
+}
+
+.loader {
+  width: 124px;
+  height: 124px;
+  border-radius: 50%;
+  position: fixed;
+  top: 46%;
+  left: 46%;
+  animation: rotate 1s linear infinite;
+}
+.loader::before,
+.loader::after {
+  content: "";
+  box-sizing: border-box;
+  position: absolute;
+  inset: 0px;
+  border-radius: 50%;
+  border: 10px solid #fff;
+  animation: prixClipFix 2s linear infinite;
+}
+.loader::after {
+  inset: 16px;
+  transform: rotate3d(90, 90, 0, 180deg);
+  border-color: #ff3d00;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes prixClipFix {
+  0% {
+    clip-path: polygon(50% 50%, 0 0, 0 0, 0 0, 0 0, 0 0);
+  }
+  50% {
+    clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 0, 100% 0, 100% 0);
+  }
+  75%,
+  100% {
+    clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 100% 100%, 100% 100%);
+  }
+}
+
+.home {
+  padding: 2rem;
+}
+
+.heading-primary {
+  color: var(--color-danger);
+  font-size: 3.2rem;
+  font-weight: 600;
+  border-bottom: 2px solid #ccc;
+  display: inline-block;
+}
+
+.playlist-card {
+  min-width: 14rem;
+  width: 16rem;
+  padding: 15px;
+  background-color: var(--color-blue-light);
+  border-radius: 6px;
+  cursor: pointer;
+  transition: all ease 0.4s;
+}
+
+.playlist-card-image {
+  width: 100%;
+  height: 14rem;
+  border-radius: 6px;
+  margin-bottom: 10px;
+  background-color: var(--color-danger);
+}
+
+.playlist-card h4 {
+  color: #222;
+  font-size: 1.4rem;
+}
+
+.playlists-row {
+  display: flex;
+  gap: 2rem;
+  font-family: sans-serif;
 }
