--- a/client/src/index.css
+++ b/client/src/index.css
@@ -469,3 +469,26 @@ nav .brand-heading {
 .home {
   padding: 2rem;
 }
+
+/* .form-container {
+  max-width: 80rem;
+  margin: 0 auto;
+  height: 500px;
+  padding: 3rem;
+}
+
+.input-box {
+  margin-bottom: 2rem;
+}
+
+.input-box label {
+  display: block;
+  font-size: 1.6rem;
+} */
+
+.sub-menu {
+  background-color: var(--color-danger);
+  padding: 0.6rem 1.8rem;
+  border-radius: 24px;
+  font-size: 1.2rem;
+}
