--- a/client/src/form.css
+++ b/client/src/form.css
@@ -41,7 +41,7 @@
   margin: 30px 0;
 }
 
-.input-box input {
+.input-box .auth-input {
   width: 100%;
   height: 100%;
   background: transparent;
@@ -54,7 +54,7 @@
   padding: 20px 25px 20px 20px;
 }
 
-.input-box input::placeholder {
+.input-box .auth-input::placeholder {
   color: white;
 }
 
