--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,6 +8,7 @@
   --color-disabled: #999;
   --text-color: #222;
   --color-player: #666666;
+  --color-active: #ff8c9e;
 
   --color-blue-light: #dae8f5;
 }
@@ -42,7 +43,7 @@ html {
 
 .App {
   background-color: #eee;
-  min-height: 100vh;
+  /* min-height: 100vh; */
 }
 
 nav {
@@ -188,6 +189,7 @@ nav .brand-heading {
 .playlist {
   /* margin-top: 408px; */
   padding: 1.2rem;
+  margin-bottom: 3rem;
 }
 
 .song {
@@ -205,8 +207,9 @@ nav .brand-heading {
   background-color: var(--color-danger);
 }
 
-.song.active {
-  background-color: var(--color-danger);
+.active {
+  /* background-color: var(--color-primary); */
+  background-color: var(--color-active);
 }
 
 .song:active {
@@ -432,7 +435,7 @@ nav .brand-heading {
 
 .heading-primary {
   color: var(--color-danger);
-  font-size: 3.2rem;
+  font-size: 2.4rem;
   font-weight: 600;
   border-bottom: 2px solid #ccc;
   display: inline-block;
@@ -466,7 +469,7 @@ nav .brand-heading {
 
 .playlist-card-image {
   width: 100%;
-  height: 14rem;
+  height: 12rem;
   border-radius: 6px;
   margin-bottom: 10px;
   background-color: var(--color-danger);
@@ -481,6 +484,7 @@ nav .brand-heading {
   display: flex;
   gap: 2rem;
   font-family: sans-serif;
+  margin-bottom: 1.6rem;
 }
 
 .song-index {
@@ -491,6 +495,7 @@ nav .brand-heading {
 
 .home {
   padding: 2rem;
+  overflow: scroll;
 }
 
 /* .form-container {
@@ -614,4 +619,33 @@ nav .brand-heading {
   padding: 10px 20px;
   border: none;
   outline: 1px solid #010101;
+}
+
+.song-row {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+  margin-bottom: 2rem;
+}
+
+.song-card {
+  min-width: 12rem;
+  width: 14rem;
+  padding: 14px;
+  background-color: var(--color-peach);
+  border-radius: 6px;
+  cursor: pointer;
+  transition: all ease 0.4s;
+}
+
+.song-card-image {
+  width: 100%;
+  height: 10rem;
+  border-radius: 6px;
+  margin-bottom: 10px;
+  background-color: var(--color-active);
+}
+
+.song-card h3 {
+  font-size: 1.4rem;
 }
