--- a/client/src/index.css
+++ b/client/src/index.css
@@ -195,6 +195,7 @@ nav .brand-heading {
 .song {
   display: flex;
   align-items: center;
+  gap: 1rem;
   margin-bottom: 1.2rem;
   background-color: #fff;
   padding: 8px 16px;
@@ -488,9 +489,12 @@ nav .brand-heading {
 }
 
 .song-index {
+  width: 3.2rem;
+  margin: 0 2rem 0 1rem;
+}
+.song-index span {
   font-weight: 500;
   font-size: 1.8rem;
-  margin: 0 2rem 0 1rem;
 }
 
 .home {
@@ -521,106 +525,6 @@ nav .brand-heading {
   font-size: 1.2rem;
 }
 
-.song-form-container {
-  max-width: 80rem;
-  margin: 0 auto;
-  padding: 2rem;
-  background-color: #bbb;
-  margin-bottom: 3rem;
-  box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.5);
-}
-
-.input-box {
-  margin-bottom: 2rem;
-  display: flex;
-  align-items: center;
-  gap: 2rem;
-}
-
-.song-label {
-  font-size: 1.8rem;
-  margin-bottom: 0.6rem;
-  flex: 3;
-}
-
-.song-input {
-  flex: 9;
-  width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #fff;
-  border-radius: 4px;
-  box-sizing: border-box;
-}
-
-.upload-box {
-  width: 100%;
-}
-
-.song-submit {
-  width: 100%;
-  background-color: #4caf50;
-  font-size: 1.6rem;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-.upload-card {
-  border-radius: 10px;
-  margin-bottom: 2rem;
-  /* margin: 0 0 2rem auto; */
-  /* box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.3); */
-  /* width: 50rem; */
-  height: 18rem;
-  /* background-color: #ffffff; */
-  /* padding: 10px 30px 40px; */
-  display: flex;
-  align-items: center;
-}
-
-.upload-card h3 {
-  flex: 3;
-  font-size: 1.8rem;
-  font-weight: 600;
-}
-
-.drop-box {
-  flex: 9;
-  /* margin: 10px 0; */
-  padding: 30px 0;
-  background-color: #fff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  /* border: 3px dotted #a3a3a3; */
-  border-radius: 5px;
-}
-
-.upload-btn {
-  text-decoration: none;
-  background-color: #005af0;
-  color: #ffffff;
-  padding: 10px 20px;
-  border: none;
-  outline: none;
-  transition: 0.3s;
-}
-
-.upload-btn:hover {
-  text-decoration: none;
-  background-color: #ffffff;
-  color: #005af0;
-  padding: 10px 20px;
-  border: none;
-  outline: 1px solid #010101;
-}
-
 .song-row {
   display: flex;
   align-items: center;
@@ -648,4 +552,198 @@ nav .brand-heading {
 
 .song-card h3 {
   font-size: 1.4rem;
+}
+
+.user-playlists {
+  padding: 1rem;
+  background-color: var(--color-light);
+}
+
+.user-playlists-header {
+  padding: 1rem 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--color-gray);
+  /* background-color: ; */
+}
+
+.user-playlists-header h3 {
+  font-size: 1.8rem;
+  font-weight: 600;
+}
+
+.service-button {
+  padding: 1rem 2.8rem;
+  font-size: 1.4rem;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  text-decoration: none;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.service-button.outline-hover {
+  background-color: #00c851; /* Green */
+  border: 2px solid #00c851;
+}
+
+.service-button.outline-hover:hover {
+  background-color: transparent;
+  color: #00c851;
+}
+
+.service-button.gradient-bg {
+  background-color: #ff4444; /* Red */
+}
+
+.service-button.gradient-bg:hover {
+  background: linear-gradient(45deg, #4caf50, #ff9800);
+}
+
+.dots-playing {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  gap: 3px;
+}
+
+.dot {
+  width: 3px;
+  height: 20px;
+  border-radius: 20px;
+  background-color: #fff;
+  transform: translate(0px, 0px);
+  animation: bounce 1s infinite;
+}
+
+.dot:nth-child(2) {
+  animation-delay: 0.2s;
+}
+
+.dot:nth-child(3) {
+  animation-delay: 0.4s;
+}
+
+@keyframes bounce {
+  0% {
+    width: 1px;
+  }
+  40% {
+    width: 0px;
+    height: 2px;
+  }
+  100% {
+    height: 20px;
+  }
+}
+
+/* Modal */
+.modal {
+  display: block; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 4; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+
+.modal-body {
+  padding: 2rem 4rem;
+}
+
+.modal-header {
+  background-color: var(--color-active);
+  padding: 1.6rem 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fff;
+  margin: auto;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+.modal-footer {
+  background-color: var(--color-peach);
+  padding: 1rem;
+}
+
+/* The Close Button */
+.close-button {
+  background-color: #eee;
+  color: red;
+  border-radius: 50%;
+  font-size: 3.2rem;
+  font-weight: 600;
+  width: 5rem;
+  border: none;
+}
+
+.close-button:hover,
+.close-button:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal-input {
+  display: block;
+  width: 60%;
+  padding: 1rem;
+  margin-bottom: 2rem;
+}
+
+.modal-list {
+  margin-bottom: 1.6rem;
+  font-size: 1.8rem;
+  font-weight: 600;
+  background-color: #ccc;
+  padding: 1rem 2rem;
+  color: #0060b6;
+}
+
+.name-row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.more-menu-container {
+  position: relative;
+}
+
+.more-menu {
+  width: 12rem;
+  background-color: #fff;
+  position: absolute;
+}
+
+.more-menu-items {
+  list-style-type: none;
+  padding: 1rem;
+}
+
+.more-menu-items li {
+  padding: 0.4rem 1rem;
+  margin-bottom: 0.6rem;
+  font-size: 1.1rem;
+  border-bottom: 1px solid #eee;
+}
+.more-menu-items li:hover {
+  background-color: var(--color-primary);
 }
